Refactored content script

--- a/src/background.html
+++ b/src/background.html
@@ -11,10 +11,10 @@
      -->
   </head>
   <body>
-    <script src="src/js/lib/jquery.js"></script>
-    <script src="src/js/lib/underscore.js"></script>
-    <script src="src/js/lib/backbone.js"></script>
-    <script src="src/js/background.js"></script>
+    <script src="js/lib/jquery.js"></script>
+    <script src="js/lib/underscore.js"></script>
+    <script src="js/lib/backbone.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
 
