--- a/src/popup.html
+++ b/src/popup.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Getting Started Extension's Popup</title>
-	<link rel="stylesheet" href="src/css/bootstrap.min.css">
-	<link rel="stylesheet" href="src/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 		<style>
 			body {
 				min-width: 357px;
@@ -32,11 +32,11 @@
 		</a>
 	</div>
 		
-	<script src="src/js/lib/jquery.js"></script>
-	<script src="src/js/lib/bootstrap.min.js"></script>
-	<script src="src/js/lib/underscore.js"></script>
-	<script src="src/js/lib/backbone.js"></script>
-	<script src="src/js/popup.js"></script>
+	<script src="js/lib/jquery.js"></script>
+	<script src="js/lib/bootstrap.min.js"></script>
+	<script src="js/lib/underscore.js"></script>
+	<script src="js/lib/backbone.js"></script>
+	<script src="js/popup.js"></script>
 	</body>
 </html>
 
