Refactored background to use require.js

--- a/src/background.html
+++ b/src/background.html
@@ -11,10 +11,8 @@
      -->
   </head>
   <body>
-    <script src="js/lib/jquery.js"></script>
-    <script src="js/lib/underscore.js"></script>
-    <script src="js/lib/backbone.js"></script>
-    <script src="js/background.js"></script>
+
+    <script data-main="js/background" src="js/lib/require.js"></script>
   </body>
 </html>
 
