--- a/src/popup.html
+++ b/src/popup.html
@@ -20,23 +20,23 @@
 	</head>
 	<body>
 
-	<div class="btn-group btn-group-justified">
-		<a id="edit" class="btn btn-default">
-			<i class="icon-pencil"></i>
-		</a>
-		<a id="display" class="btn btn-default">
-			<i class="icon-eye-close"></i>
-		</a>
-		<a id="options" class="btn btn-default">
-			<i class="icon-cogs"></i>
-		</a>
-	</div>
+	<div id="content"></div>
+
+	<script id="toolbar-tmpl" type="view">
+		<div class="btn-group btn-group-justified">
+			<a id="edit" class="btn btn-default">
+				<i class="icon-pencil"></i>
+			</a>
+			<a id="display" class="btn btn-default">
+				<i class="icon-eye-close"></i>
+			</a>
+			<a id="options" class="btn btn-default">
+				<i class="icon-cogs"></i>
+			</a>
+		</div>
+	</script>
 		
-	<script src="js/lib/jquery.js"></script>
-	<script src="js/lib/bootstrap.min.js"></script>
-	<script src="js/lib/underscore.js"></script>
-	<script src="js/lib/backbone.js"></script>
-	<script src="js/popup.js"></script>
+	<script data-main="js/popup" src="js/lib/require.js"></script>
 	</body>
 </html>
 
