Refactored popup view to use requirejs

--- a/src/popup.html
+++ b/src/popup.html
@@ -21,21 +21,9 @@
 	<body>
 
 	<div id="content"></div>
-
-	<script id="toolbar-tmpl" type="view">
-		<div class="btn-group btn-group-justified">
-			<a id="edit" class="btn btn-default">
-				<i class="icon-pencil"></i>
-			</a>
-			<a id="display" class="btn btn-default">
-				<i class="icon-eye-close"></i>
-			</a>
-			<a id="options" class="btn btn-default">
-				<i class="icon-cogs"></i>
-			</a>
-		</div>
-	</script>
-		
+	
+	<script src="js/lib/handlebars.runtime.js"></script>
+	<script src="js/templates/popuptoolbar.js"></script>
 	<script data-main="js/popup" src="js/lib/require.js"></script>
 	</body>
 </html>
