Implemented first version of options page

--- a/src/popup.html
+++ b/src/popup.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<title>Getting Started Extension's Popup</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<!--link rel="stylesheet" href="css/bootstrap-theme.min.css"-->
-	<!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/spacelab/bootstrap.min.css"> -->
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/readable/bootstrap.min.css">
-	<!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/slate/bootstrap.min.css"> -->
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<!--link rel="stylesheet" href="css/bootstrap-theme.min.css"-->
+		<!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/spacelab/bootstrap.min.css"> -->
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/readable/bootstrap.min.css">
+		<!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/slate/bootstrap.min.css"> -->
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/icomoon.css">
 		<style>
 			body {
 				min-width: 357px;
