--- a/src/options.html
+++ b/src/options.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Getting Started Extension's Popup</title>
+		<title>Notely - Options</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<!--link rel="stylesheet" href="css/bootstrap-theme.min.css"-->
 		<!-- <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/spacelab/bootstrap.min.css"> -->
@@ -72,7 +72,7 @@
 								<tbody>
 								</tbody>
 							</table>
-							<a type="submit" class="btn btn-sm btn-danger"><i class="icon-trash"></i> Clear All Notes</a>
+							<!--a type="submit" class="btn btn-sm btn-danger"><i class="icon-trash"></i> Clear All Notes</a-->
 						</div>
 					</div>
 					
