Made note visible as default, fixed some small issues with margins, added clear all notes and clear notes for one page and also implemented export all notes for all pages

--- a/src/popup.html
+++ b/src/popup.html
@@ -29,6 +29,10 @@
 				background-color: #f5f58d !important;
 			}
 
+			.list-group-item-text {
+				margin-bottom: 10px;
+			}
+
 			.btn.btn-default:active {
 				color: #999;
 			}
