--- a/src/options.html
+++ b/src/options.html
@@ -72,7 +72,8 @@
 								<tbody>
 								</tbody>
 							</table>
-							<!--a type="submit" class="btn btn-sm btn-danger"><i class="icon-trash"></i> Clear All Notes</a-->
+							<a type="submit" class="clear btn btn-sm btn-danger"><i class="icon-trash"></i> Clear All Notes</a>
+							<a type="submit" class="export-all btn btn-sm btn-default"><i class="icomoon-upload"></i> Export All Notes</a>
 						</div>
 					</div>
 					
@@ -91,6 +92,7 @@
 								<tbody>
 								</tbody>
 							</table>
+							<a type="submit" class="clear btn btn-sm btn-danger"><i class="icon-trash"></i> Clear Notes</a>
 						</div>
 					</div>
 					
