added img-responsive class to images on options page

--- a/src/options.html
+++ b/src/options.html
@@ -103,31 +103,31 @@
 								<h2>Add note</h2>
 							</div>
 							<p>Add a note by clicking the quill-icon in the popup toolbar.</p>
-							<p><img src="http://notely.github.io/images/docs/add.png" alt=""></p>
+							<p><img class="img-responsive" src="http://notely.github.io/images/docs/add.png" alt=""></p>
 							<p>Then click on any part of the page you want to annotate. A red marker will be placed and a yellow note edit box will appear. To save a note simply type what you want and click the close button or outside the note.</p>
-							<p><img src="http://notely.github.io/images/docs/add2.png" alt=""></p>
+							<p><img class="img-responsive" src="http://notely.github.io/images/docs/add2.png" alt=""></p>
 							<p>Now when you refresh the page or revisit the page you will be able to see the note agin.</p>
 							<div class="page-header">
 								<h2>Move notes around the page</h2>
 							</div>
 							<p>To move note around the page simply grab the red marker with your mouse and move it to the location you want. The marker will remember it's position next time you visit the page.</p>
-							<p><img src="http://notely.github.io/images/docs/move.png" alt=""></p>
+							<p><img class="img-responsive" src="http://notely.github.io/images/docs/move.png" alt=""></p>
 							<div class="page-header">
 								<h2>Remove note</h2>
 							</div>
 							<p>To remove one note you can delete it directly form the edit box, but you can also delete it from the note list in the Notely popup view.</p>
-							<p><img src="http://notely.github.io/images/docs/delete1.png" alt=""> <img src="http://notely.github.io/images/docs/delete2.png" alt=""></p>
+							<p><img class="img-responsive" src="http://notely.github.io/images/docs/delete1.png" alt=""> <img class="img-responsive" src="http://notely.github.io/images/docs/delete2.png" alt=""></p>
 							<p>If you want to delete all notes related to one page or if you don't want to visit the page the notes belong to, you can still view and delete notes from the archive page. Read more about that here.</p>
 							<div class="page-header">
 								<h2>Hide/Show notes</h2>
 							</div>
 							<p>If you think the notes are in the way of your browsing or if you wan to hide them from anyone you can toggle the visibility of the note by clicking the eye-icon in the popup toolbar.</p>
-							<p><img src="http://notely.github.io/images/docs/hide-show.png" alt=""></p>
+							<p><img class="img-responsive" src="http://notely.github.io/images/docs/hide-show.png" alt=""></p>
 							<div class="page-header">
 								<h2>View all notes related to a page</h2>
 							</div>
 							<p>If you are unsure if you have added some notes somewhere on a long page or if you have turned off the visibility of the notes you can still see all notes related to a specific page by clicking the Notle icon in the browser toolbar.</p>
-							<p><img src="http://notely.github.io/images/docs/view.png" alt=""></p>
+							<p><img class="img-responsive" src="http://notely.github.io/images/docs/view.png" alt=""></p>
 						</div>
 					</div>
 					
