Update archive icon in nav list

--- a/src/options.html
+++ b/src/options.html
@@ -45,7 +45,7 @@
 				<div class="col-sm-4">
 					<div class="list-group">
 						<a href="#" class="archive list-group-item active">
-							<i class="icomoon-cabinet"></i> Archives
+							<i class="icomoon-drawer3"></i> Archives
 						</a>
 						<a href="#help" class="help list-group-item">
 							<i class="icomoon-support"></i> Getting started
